--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,23 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/app.js"></script>
 </head>
+
 <body>
-    
+    <h1>Are you Smarter Than Anaiah?</h1>
+    <div class="startContainer">
+        <button id="start">Start Game</button>
+
+        <button id="rules">Game Rules</button>
+
+    </div>
+    <div id="quizContainer">
+        <h2>Question 1</h2>
+        <p class="question">What is the name of the main villian in Frozen?</p>
+        <button class='option1'>Hans</button>
+        <button class="option2">Elsa</button>
+        <button class="option3">Olaf</button>
+        <button class="option4">Anna</button>
+    </div>
 </body>
+
 </html>
