--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Are you Smarter Than Anaiah?</h1>
-    <div class="startContainer">
+    <div id="startContainer">
         <button id="start">Start Game</button>
 
         <button id="rules">Game Rules</button>
