Created render and cache

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     </div>
     <div id="quizContainer">
-        <h2>Question 1</h2>
+        <h2></h2>
         <p class="question">What is the name of the main villian in Frozen?</p>
-        <button class='option1'>Hans</button>
-        <button class="option2">Elsa</button>
-        <button class="option3">Olaf</button>
-        <button class="option4">Anna</button>
+        <button class='o-0'>Hans</button>
+        <button class="o-1">Elsa</button>
+        <button class="o-2">Olaf</button>
+        <button class="o-3">Anna</button>
     </div>
 </body>
 
