Added Cache elements, win/lose elements, and CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 <body>
     <h1>Are you Smarter Than Anaiah?</h1>
+    <div class="GameStatus">
+        <h2 class="win">
+            "You Win! You ARE Smarter Than Anaiah!"
+        </h2>
+        <h2 class="lose">
+            "You Lose! You ARE NOT Smarter Than Anaiah!"
+        </h2>
+    </div>
     <div id="startContainer">
         <button id="start">Start Game</button>
 
