Added categories and back button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- <audio id="backgroundMusic" src="path/to/background-music.mp3" loop autoplay></audio> -->
     <h1>Are you Smarter Than Anaiah?</h1>
     <div class="GameStatus">
         <h2 class="win">
@@ -25,7 +26,7 @@
         <button id="rules">Game Rules</button>
 
     </div>
-    <div id="quizContainer">
+    <div id="quizContainer1">
         <h2></h2>
         <p class="question">What is the name of the main villian in Frozen?</p>
         <button class='o-0'>Hans</button>
@@ -33,6 +34,39 @@
         <button class="o-2">Olaf</button>
         <button class="o-3">Anna</button>
     </div>
+    <div id="quizContainer2">
+        <h2></h2>
+        <p class="question">What is the name of the main villian in Frozen?</p>
+        <button class='o-0'>Hans</button>
+        <button class="o-1">Elsa</button>
+        <button class="o-2">Olaf</button>
+        <button class="o-3">Anna</button>
+    </div>
+    <div id="quizContainer3">
+        <h2></h2>
+        <p class="question">What is the name of the main villian in Frozen?</p>
+        <button class='o-0'>Hans</button>
+        <button class="o-1">Elsa</button>
+        <button class="o-2">Olaf</button>
+        <button class="o-3">Anna</button>
+    </div>
+    <div class="gRules">
+        <h2>Game Rules</h2>
+        <ul>
+            <li> There are 10 questions in each Category</li>
+            <li> You must answer at least 7 questions correctly to win</li>
+            <li> If you answer three questions incorrectly, YOU LOSE!</li>
+            <li> You may retry as many times as you like</li>
+            <li> There is a <i>suggested</i> 15 second timer per quesion</li>
+        </ul>
+    </div>
+    <div class="categories">
+        <h2>Categories</h2>
+        <button class="kids">Kids Movies</button>
+        <button class="pop">Pop Culture</button>
+        <button class="random">Random Facts</button>
+    </div>
+    <button class="back">Back to Start</button>
 </body>
 
 </html>
