--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
     <div class="gRules">
         <h2>Game Rules</h2>
         <ul>
-            <li> There are 10 questions in each Category</li>
-            <li> You must answer at least 7 questions correctly to win</li>
-            <li> If you answer three questions incorrectly, YOU LOSE!</li>
+            <li> There are 5 questions in each Category</li>
+            <li> You must answer all 5 questions correctly to win</li>
+            <li> If you answer even 1 question incorrectly, YOU LOSE!</li>
             <li> You may retry as many times as you like</li>
             <li> There is a <i>suggested</i> 15 second timer per quesion</li>
+            <li> No cheating! Good Luck</li></lio>
         </ul>
     </div>
     <div class="categories">
