Updates to fix categories

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div id="quizContainer2">
         <h2></h2>
-        <p class="question">What is the name of the main villian in Frozen?</p>
+        <p class="question2">Who is not a Kardashian?</p>
         <button class='o-0'>Hans</button>
         <button class="o-1">Elsa</button>
         <button class="o-2">Olaf</button>
@@ -43,7 +43,7 @@
     </div>
     <div id="quizContainer3">
         <h2></h2>
-        <p class="question">What is the name of the main villian in Frozen?</p>
+        <p class="question3">Who is not a pop artist?</p>
         <button class='o-0'>Hans</button>
         <button class="o-1">Elsa</button>
         <button class="o-2">Olaf</button>
