Correcetd Code for categories

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="o-2">Olaf</button>
         <button class="o-3">Anna</button>
     </div>
-    <div id="quizContainer2">
+    <!-- <div id="quizContainer2">
         <h2></h2>
         <p class="question2">Who is not a Kardashian?</p>
         <button class='o-0'>Hans</button>
@@ -48,7 +48,7 @@
         <button class="o-1">Elsa</button>
         <button class="o-2">Olaf</button>
         <button class="o-3">Anna</button>
-    </div>
+    </div> -->
     <div class="gRules">
         <h2>Game Rules</h2>
         <ul>
