--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Are you smarter than Anaiah?</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/app.js"></script>
+
 </head>
 
 <body>
@@ -33,7 +34,7 @@
         <button class="o-2">Olaf</button>
         <button class="o-3">Anna</button>
     </div>
-    
+
     <div class="gRules">
         <h2>Game Rules</h2>
         <ul>
@@ -42,7 +43,8 @@
             <li> If you answer even 1 question incorrectly, YOU LOSE!</li>
             <li> You may retry as many times as you like</li>
             <li> There is a <i>suggested</i> 15 second timer per quesion</li>
-            <li> No cheating! Good Luck</li></lio>
+            <li> No cheating! Good Luck</li>
+            </lio>
         </ul>
     </div>
     <div class="categories">
