--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Are you smarter than Anaiah?</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/app.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/nqr6flp.css">
+    <link rel="stylesheet" href="https://use.typekit.net/nqr6flp.css">
 
 </head>
 
 <body>
-    <h1>Are you Smarter Than Anaiah?</h1>
+    <h1 id="mainTitle">Are you Smarter Than Anaiah?</h1>
     <div class="GameStatus">
         <h2 class="win">
             "You Win! You ARE Smarter Than Anaiah!"
@@ -29,10 +31,13 @@
     <div id="quizContainer1">
         <h2></h2>
         <p class="question">What is the name of the main villian in Frozen?</p>
-        <button class='o-0'>Hans</button>
-        <button class="o-1">Elsa</button>
-        <button class="o-2">Olaf</button>
-        <button class="o-3">Anna</button>
+        <div class="choice">
+            <button class='o-0'>Hans</button>
+            <button class="o-1">Elsa</button>
+            <button class="o-2">Olaf</button>
+            <button class="o-3">Anna</button>
+
+        </div>
     </div>
 
     <div class="gRules">
@@ -44,14 +49,16 @@
             <li> You may retry as many times as you like</li>
             <li> There is a <i>suggested</i> 15 second timer per quesion</li>
             <li> No cheating! Good Luck</li>
-            </lio>
+            
         </ul>
     </div>
     <div class="categories">
         <h2>Categories</h2>
-        <button class="kids">Kids Movies</button>
-        <button class="pop">Pop Culture</button>
-        <button class="random">Random Facts</button>
+        <div class="options">
+            <button class="kids">Kids Movies</button>
+            <button class="pop">Pop Culture</button>
+            <button class="random">Random Facts</button>
+        </div>
     </div>
     <button class="back">Back to Start</button>
 </body>
