--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <audio id="background-music" autoplay loop>
+        <source src="assets/music.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+    <button id="music" ><img src="css/Images/speaker.png"></button>
     <h1 id="mainTitle">Are you Smarter Than Anaiah?</h1>
     <div class="GameStatus">
         <h2 class="win">
