added score counter & Questiono count to UI

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
         Your browser does not support the audio element.
     </audio>
     <button id="music" ><img src="css/Images/speaker.png"></button>
+    <h1 id="questionNumberDisplay" class="hidden">Question 1/10</h1>
     <h1 id="mainTitle">Are you Smarter Than Anaiah?</h1>
     <div class="GameStatus">
         <h2 class="win">
-            "You Win! You ARE Smarter Than Anaiah!"
+            You Win! You ARE Smarter Than Anaiah! <br>
+            Your score is <span id="winScore"></span>/10
         </h2>
         <h2 class="lose">
-            "You Lose! You ARE NOT Smarter Than Anaiah!"
+            You Lose! You ARE NOT Smarter Than Anaiah! <br>
+            Your score is <span id="loseScore"></span>/10
         </h2>
     </div>
     <div id="startContainer">
